--- a/styles/achievement.css
+++ b/styles/achievement.css
@@ -99,6 +99,71 @@ body.dark-mode {
     color: #fff;
 }
 
+/* Responsive Navbar Styles start*/
+.nav-toggle {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.nav-toggle i {
+    color: #333;
+}
+/* Responsive Navbar Styles */
+@media (max-width: 992px) {
+    .nav-toggle {
+        display: block;
+    }
+    .nav-content {
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+
+    .nav-left, .nav-right {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        width: 100%;
+    }
+
+    .nav-left.active, .nav-right.active {
+        display: flex;
+    }
+
+    .nav-left .nav-text a {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .search-bar {
+        width: 50%;
+        margin-top: 10px;
+    }
+
+    .dark-mode-button {
+        width: 50%;
+    }
+    
+}
+
+@media (max-width: 480px) {
+    .nav-content {
+        padding: 10px;
+    }
+
+    .nav-left, .nav-right {
+        width: 100%;
+    }
+
+    .nav-left {
+        margin-bottom: 10px;
+    }
+}
+/* Responsive Navbar Styles ends*/
 /* achievement Section */
 
 .header-container{
